src/test/snapshots/my_http_server__test__emojis__test_md2html__test_md2html-emojis-case-base-6.snap
---
source: src/test/emojis.rs
description: ":arrow_down: and \\:arrow_down:"
---
<!DOCTYPE html><html>
<head><title></title></head>
<body>
<p>⬇ and \:arrow_down:</p>
</body></html>
